<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_main_information"
        android:orderInCategory="50"
        android:title="@string/menu_main_information"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_main_about"
        android:orderInCategory="100"
        android:title="@string/menu_main_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_main_contact_us"
        android:orderInCategory="200"
        android:title="@string/menu_main_contact_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_main_licenses"
        android:orderInCategory="400"
        android:title="@string/menu_main_licences"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_main_help"
        android:orderInCategory="800"
        android:title="@string/menu_main_help"
        app:showAsAction="never" />

</menu>